updated templates except views

--- a/PMS/accounts/templates/accounts/editstudent.html
+++ b/PMS/accounts/templates/accounts/editstudent.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
     <link rel="stylesheet" href="{% static 'css/widget.css' %}">
     <script src="{% static 'js/modernizr.js' %}"></script>
-    <link href="{% static 'css/gsdk-base.css' %]" rel="stylesheet" />
+    <link href="{% static 'css/gsdk-base.css' %}" rel="stylesheet" />
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
 {% endblock css %}
 
@@ -18,7 +18,7 @@
 
 <div class="container">
   <div class="row">
-    <h2 class="student-name text-center">EDIT A STUDENT</h2>
+    <h2 class="student-name text-center">ADD A STUDENT</h2>
   </div>
    
 <div class="image-container set-full-height">
@@ -32,8 +32,7 @@
             <div class="wizard-container"> 
                 
                 <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
-                    <form action="" method="post">
-                        {% csrf_token %}
+                    <form action="" method="">
                 <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
                 
                         <div class="wizard-header">
@@ -59,7 +58,7 @@
                                   <div class="col-sm-4 col-sm-offset-1">
                                      <div class="picture-container">
                                           <div class="picture">
-                                              <img src="{% static 'img/default-avatar.png' %}" class="picture-src" id="wizardPicturePreview" title=""/>
+                                              <img src="img/default-avatar.png" class="picture-src" id="wizardPicturePreview" title=""/>
                                               <input type="file" id="wizard-picture">
                                           </div>
                                           <h6>Choose Picture</h6>
@@ -68,41 +67,75 @@
                                   <div class="col-sm-6">
                                       <div class="form-group">
                                         <label>First Name <small>(required)</small></label>
-                                        {{ form.firstname }}
+                                        <input name="firstname" type="text" class="form-control" placeholder="Andrew...">
+                                      </div>
+                                      <div class="form-group">
+                                        <label>Middle Name <small>(required)</small></label>
+                                        <input name="midname" type="text" class="form-control" placeholder="Parker...">
                                       </div>
                                       <div class="form-group">
                                         <label>Last Name <small>(required)</small></label>
-                                        {{ form.lastname }}
+                                        <input name="lastname" type="text" class="form-control" placeholder="Smith...">
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Username <small>(required)</small></label>
-                                          {{ form.username }}
+                                          <input name="username" type="text" class="form-control" placeholder="20XX12345" rel="gp" data-size="5" data-character-set="0-9,u">
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Password <small>(required)</small></label>
-                                          {{ form.password }}
+                                          <input name="password" type="text" class="form-control" placeholder="********" rel="gp" data-size="8" data-character-set="a-z,A-Z,0-9">
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                          <div class="form-group">
                                             <label>Year</label><br>
-                                             {{ form.year }}
+                                             <select name="country" class="form-control">
+                                                <option value="7"> 7 </option>
+                                                <option value="8"> 8 </option>
+                                                <option value="9"> 9 </option>
+                                                <option value="10"> 10 </option>
+                                                <option value="11"> 11 </option>
+                                                <option value="12"> 12 </option>
+                                            </select>
                                           </div>
                                     </div>
                                     <div class="col-sm-10 col-sm-offset-1">
                                          <div class="form-group">
                                             <label>Section</label><br>
-                                            {{ form.section }}
+                                             <select name="country" class="form-control">
+                                                <option value="A"> A </option>
+                                                <option value="B"> B </option>
+                                                <option value="C"> C </option>
+                                                <option value="D"> D </option>
+                                                <option value="E"> E </option>
+                                                <option value="F"> F </option>
+                                                <option value="G"> G </option>
+                                                <option value="H"> H </option>
+                                                <option value="I"> I </option>
+                                                <option value="10"> J </option>
+                                                <option value="K"> K </option>
+                                                <option value="L"> L </option>
+                                                <option value="M"> M </option>
+                                                <option value="N"> N </option>
+                                                <option value="SA"> Special A </option>
+                                                <option value="SB"> Special B </option>
+                                            </select>
                                           </div>
                                     </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
+                                          <label>Email <small>(required)</small></label>
+                                          <input name="email" type="email" class="form-control" placeholder="andrew@creative-tim.com">
+                                      </div>
+                                  </div>
+                                  <div class="col-sm-10 col-sm-offset-1">
+                                      <div class="form-group">
                                           <label>Address <small>(required)</small></label>
-                                          {{ form.address }}
+                                          <input name="address" type="text" class="form-control" placeholder="6866 Williams Street Fayetteville, NC 28303">
                                       </div>
                                   </div>
                               </div>
@@ -110,42 +143,58 @@
                             <div class="tab-pane" id="guardian">
                                 <h4 class="info-text"> Type in guardian's name. </h4>
                                 <div class="row">
-
+                                   
                                     <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                         <label>First Name <small>(required)</small></label>
-                                        {{ form.gfirstname }}
+                                        <input name="gfirstname" type="text" class="form-control" placeholder="Andrew...">
+                                      </div>
+                                      <div class="form-group">
+                                        <label>Middle Name <small>(required)</small></label>
+                                        <input name="gmidname" type="text" class="form-control" placeholder="Parker...">
                                       </div>
                                       <div class="form-group">
                                         <label>Last Name <small>(required)</small></label>
-                                        {{ form.glastname }}
+                                        <input name="glastname" type="text" class="form-control" placeholder="Smith...">
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Address <small>(required)</small></label>
-                                          {{ form.gaddress }}
+                                          <input name="gaddress" type="text" class="form-control" placeholder="6866 Williams Street Fayetteville, NC 28303">
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Contact number <small>(required)</small></label>
-                                          {{ form.gcontact }}
+                                          <input name="gcontact" type="text" class="form-control" placeholder="441-5656">
                                       </div>
                                   </div>
-
+                                    
                                 </div>
                             </div>
                         <div class="tab-pane" id="siblings">
                                 <div class="row">
                                     <div class="col-sm-10 col-sm-offset-1">
                                         <h4 class="info-text"> If you have a sibling enrolled in the school, type in the oldest sibling. </h4>
-                                       <CENTER><label for="danger" class="btn btn-danger"> Yes {{ form.sibling }} </label>
-                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no"></label value="No"></CENTER>
-
+                                       <CENTER><label for="danger" class="btn btn-danger"> Yes <input type="checkbox" id="yes" value="Code"></label>
+                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no"></label value="Design"></CENTER> 
+                                      
 
                                         <div class="col-sm-10 col-sm-offset-1" id = "sinfo" style="display:none;">
-                                        </div>
+                                      <div class="form-group">
+                                        <label>First Name <small>(required)</small></label>
+                                        <input name="gfirstname" type="text" class="form-control" placeholder="Andrew...">
+                                      </div>
+                                      <div class="form-group">
+                                        <label>Middle Name <small>(required)</small></label>
+                                        <input name="gmidname" type="text" class="form-control" placeholder="Parker...">
+                                      </div>
+                                      <div class="form-group">
+                                        <label>Last Name <small>(required)</small></label>
+                                        <input name="glastname" type="text" class="form-control" placeholder="Smith...">
+                                      </div>
+                                  </div>
                                     </div>
                             </div>
                         </div>
@@ -153,14 +202,18 @@
                                 <div class="row">
                                     <div class="col-sm-10 col-sm-offset-1">
                                         <h4 class="info-text"> Do you have a scholarship? </h4>
-                                       <CENTER><label for="danger" class="btn btn-danger"> Yes <input type="checkbox" id="yes-sch" value="Yes"></label>
-                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no-sch"></label value="No"></CENTER>
-
+                                       <CENTER><label for="danger" class="btn btn-danger"> Yes <input type="checkbox" id="yes-sch" value="Code"></label>
+                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no-sch"></label value="Design"></CENTER> 
+                                      
 
                                         <div class="col-sm-10 col-sm-offset-1" id = "schinfo" style="display:none;">
                                       <div class="form-group">
-                                        <label>Scholarship</label>
-                                        {{ form.scholarship }}
+                                        <label>Name <small>(required)</small></label>
+                                        <input name="gfirstname" type="text" class="form-control" placeholder="Andrew...">
+                                      </div>
+                                      <div class="form-group">
+                                          <label>Contact number <small>(required)</small></label>
+                                          <input name="gcontact" type="text" class="form-control" placeholder="441-5656">
                                       </div>
                                   </div>
                                     </div>
@@ -170,11 +223,15 @@
                                 <div class="row">
                                     <div class="col-sm-10 col-sm-offset-1">
                                         <h4 class="info-text"> Are you a member in any organization? </h4>
-                                       <CENTER><label for="danger" class="btn btn-danger"> Yes {{ form.band_member}}</label>
-                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no-mem"></label value="No"></CENTER>
-
+                                       <CENTER><label for="danger" class="btn btn-danger"> Yes <input type="checkbox" id="yes-mem" value="Code"></label>
+                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no-mem"></label value="Design"></CENTER> 
+                                      
 
                                         <div class="col-sm-10 col-sm-offset-1" id = "meminfo" style="display:none;">
+                                      <div class="form-group">
+                                        <label>Name of Organization <small>(required)</small></label>
+                                        <input name="gfirstname" type="text" class="form-control" placeholder="Drum and Buggle">
+                                      </div>
                                   </div>
                                     </div>
                             </div>
@@ -226,4 +283,3 @@
         });
     </script>
 {% endblock js %}
-
