--- a/PMS/accounts/templates/accounts/homepage.html
+++ b/PMS/accounts/templates/accounts/homepage.html
@@ -1,11 +1,10 @@
 {% load staticfiles %}
-<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% block css %}
+
+{% block css %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
     <link rel="stylesheet" href="{% static 'css/carousel.css' %}">
-    {% endblock css %}
+{% endblock css %}
 
 {% block title %}<title> LNNCHS Payment Monitoring System </title>{% endblock title %}
 
@@ -43,7 +42,7 @@
         <h2 class="text-center lato animate slideInDown"><b>More efficient</b> than ever</h2>
         <p class="text-center">
             <br>
-            
+
         </p>
     </div>
     <a href="#section2">
@@ -240,7 +239,7 @@
                 <h2 class="text-center"><img src="{% static 'img/LNNCHS_logo.png' %}" class="img-circle"><br>Admin Login</h2>
             </div>
             <div class="modal-body row">
-                <form class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0" action="{% url 'accounts:AdminLogin' %}" method="POST">
+                <form class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0" method="POST" action="{% url 'accounts:AdminLogin' %}">
                     {% csrf_token %}
                     <div class="form-group">
                         <input type="text" class="form-control input-lg" placeholder="Admin ID" name="username">
@@ -267,7 +266,7 @@
                 <h2 class="text-center"><img src="{% static 'img/LNNCHS_logo.png' %}" class="img-circle"><br>Student Login</h2>
             </div>
             <div class="modal-body row">
-                <form class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0" method="POST" action="{% url 'accounts:StudentLogin' %}">
+                <form class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0">
                     {% csrf_token %}
                     <div class="form-group">
                         <input type="text" class="form-control input-lg" placeholder="Student ID" name="username">
