--- a/PMS/funds/templates/funds/addfunds.html
+++ b/PMS/funds/templates/funds/addfunds.html
@@ -1,4 +1,4 @@
-{% extends 'accounts:base.html' %}
+{% extends 'accounts/base.html' %}
 
 {% load staticfiles %}
 
@@ -32,7 +32,7 @@
             <div class="wizard-container"> 
                 
                 <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
-                    <form action="" method="POST">
+                    <form action="" method="">
                 <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
                 
                         <div class="wizard-header">
