--- a/PMS/funds/templates/funds/editfund.html
+++ b/PMS/funds/templates/funds/editfund.html
@@ -18,7 +18,7 @@
 
 <div class="container">
   <div class="row">
-    <h2 class="student-name text-center">ADD A FUND</h2>
+    <h2 class="student-name text-center">EDIT A FUND</h2>
   </div>
     
   <div class="image-container set-full-height">
