--- a/PMS/accounts/templates/accounts/base.html
+++ b/PMS/accounts/templates/accounts/base.html
@@ -33,6 +33,7 @@
                   <ul class="dropdown-menu">
                     <li><a href="addfunds.html">Add Fund</a></li>
                     <li><a href="viewallfunds.html">View / Edit Fund</a></li>
+                    <li><a href="addpayment.html">Add Payment</a></li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Project <b class="caret"></b></a>
@@ -56,6 +57,7 @@
 <br>
 <br>
 <br>
+
 {% block body %}{% endblock body %}
   <div id="myModal1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -82,7 +84,6 @@
             </div>
         </div>
     </div>
-</div>
 </div>
 
 {% block js %}
