--- a/PMS/accounts/templates/accounts/studenthomepage.html
+++ b/PMS/accounts/templates/accounts/studenthomepage.html
@@ -1,6 +1,5 @@
 {% load staticfiles %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 {% block css %}
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
@@ -8,7 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/widget.css' %}">
 {% endblock css %}
 
-{% block title %}<title>Student Home</title>{% endblock title %}
+    {% block title %}<title>Student Home</title>{% endblock title %}
 
 {% block body %}
    <nav class="navbar navbar-trans navbar-fixed-top" role="navigation">
@@ -100,10 +99,10 @@
             <div class="modal-body row">
                 <form class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0" method="post" id="passwordForm">
                     <div class="form-group">
-                          <input type="password" class="input-lg form-control" name="password1" id="password1" placeholder="New Password" autocomplete="off">
+                          <input type="password" class="input-lg form-control" name="password1" id="password1" placeholder="New Password" autocomplete="off" value="" required >
                     </div>
                     <div class="form-group">
-                        <input type="password" class="input-lg form-control" name="password2" id="password2" placeholder="Repeat Password" autocomplete="off">
+                        <input type="password" class="input-lg form-control" name="password2" id="password2" placeholder="Repeat Password" autocomplete="off" value="" required >
                         
                     </div>
                     <div class="form-group">
@@ -119,9 +118,24 @@
 {% endblock body %}
 
 {% block js %}
+    <script src="{% static 'js/jquery.validate.min.js' %}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="{% static 'js/bootstrap.js' %}"></script>
     <script src="{% static 'js/homepage.js' %}"></script>
     <script src="{% static 'js/passwordValidator.js' %}"></script>
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script>
+      window.onload = function () {
+      var form = document.getElementById('passwordForm');
+      form.button.onclick = function (){
+        for(var i=0; i < form.elements.length; i++){
+          if(form.elements[i].value === '' && form.elements[i].hasAttribute('required')){
+            alert('There are some required fields!');
+            return false;
+          }
+        }
+        form.submit();
+      };
+    };
+    </script>
 {% endblock js %}
