--- a/PMS/funds/templates/funds/addpayment.html
+++ b/PMS/funds/templates/funds/addpayment.html
@@ -1,71 +1,24 @@
-<!doctype html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'accounts/base.html' %}
 
+{% load staticfiles %}
+
+{% block css %}
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
-   <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/homepage.css">
-    <link rel="stylesheet" href="css/widget.css">
-    <script src="js/modernizr.js"></script> 
-    <link href="css/gsdk-base.css" rel="stylesheet" />   
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
+    <link rel="stylesheet" href="{% static 'css/widget.css' %}">
+    <script src="{% static 'js/modernizr.js' %}"></script>
+    <link href="{% static 'css/gsdk-base.css' %}" rel="stylesheet" />
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
+{% endblock css %}
 
+    {% block title %}<title>Add Payment</title>{% endblock title %}
 
-    <title>Edit Project</title>
-</head>
-<body>
-   <nav class="navbar navbar-trans navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapsible">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand text-danger" href="homepageadmin.html">LNNCHS</a>
-        </div>
-        <div class="navbar-collapse collapse" id="navbar-collapsible">
-            <ul class="nav navbar-nav navbar-left">
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Student <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="addstudents.html">Add Student</a></li>
-                    <li><a href="viewallstudents.html">View / Edit Student</a></li>
-                  </ul>
-                </li>
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Funds <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="addfunds.html">Add Fund</a></li>
-                    <li><a href="viewallfunds.html">View / Edit Fund</a></li>
-                    <li><a href="addpayment.html">Add Payment</a></li>
-                  </ul>
-                </li>
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Project <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="addproject.html">Add Project</a></li>
-                    <li><a href="viewallproject.html">View / Edit Project</a></li>
-                  </ul>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="homepage.html">Logout</a></li>
-                  </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-  </nav>
-<br>
-<br>
-<br>
-<br>
+{% block body %}
 
 <div class="container">
   <div class="row">
-    <h2 class="student-name text-center">EDIT PROJECT</h2>
+    <h2 class="student-name text-center">ADD STUDENT PAYMENT</h2>
   </div>
     
   <div class="image-container set-full-height">
@@ -85,13 +38,13 @@
                         <div class="wizard-header">
                             <h3>
                                 <br>
-                               <b>PROJECT</b> PROFILE <br>
+                               <b>PAYMENT</b> DETAILS <br>
                                <small>This information will be kept confidential.</small>
                                <br><br>
                             </h3>
                         </div>
                         <ul>
-                            <li><a href="#about" data-toggle="tab">Account</a></li>
+                            <li><a href="#about" data-toggle="tab">Payment</a></li>
                             <li><a href="#submission" data-toggle="tab">Submit</a></li>
                         </ul>
                         
@@ -101,11 +54,15 @@
                                   <h4 class="info-text"> Type in legitimate information.</h4>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
-                                        <label>Fund Name <small>(required)</small></label>
-                                        <input name="fundname" type="text" class="form-control required" placeholder="Library Fee">
+                                            <label>Student ID</label><br>
+                                             <select name="country" class="form-control">
+                                                <option value="student"> 201211234 </option>
+                                                <option value="student"> 201012345 </option>
+                                                <option value="student"> 201512345 </option>
+                                            </select>
                                       </div>
                                       <div class="form-group">
-                                        <label>Cost <small>(required)</small></label>
+                                        <label>Amount <small>(required)</small></label>
                                         <input name="cost" type="text" class="form-control required" placeholder="500">
                                       </div>    
                               </div>
@@ -137,7 +94,10 @@
     
 </div>
 </div>
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+{% endblock body %}
+
+{% block js %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/homepage.js"></script>
 
@@ -158,6 +118,4 @@
             $(".dropdown-toggle").dropdown();
         });
     </script>
-
-</body>
-</html>
+{% endblock js %}
