--- a/PMS/accounts/templates/accounts/addstudents.html
+++ b/PMS/accounts/templates/accounts/addstudents.html
@@ -32,7 +32,7 @@
             <div class="wizard-container"> 
                 
                 <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
-                    <form action="" method="">
+                    <form action="{% url 'accounts:AddStudent' %}" method="">
                 <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
                 
                         <div class="wizard-header">
