--- a/PMS/accounts/templates/accounts/homepage.html
+++ b/PMS/accounts/templates/accounts/homepage.html
@@ -266,7 +266,7 @@
                 <h2 class="text-center"><img src="{% static 'img/LNNCHS_logo.png' %}" class="img-circle"><br>Student Login</h2>
             </div>
             <div class="modal-body row">
-                <form class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0">
+                <form class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0" method='POST' action="{% url 'accounts:StudentLogin' %}">
                     {% csrf_token %}
                     <div class="form-group">
                         <input type="text" class="form-control input-lg" placeholder="Student ID" name="username">
