--- a/PMS/accounts/templates/accounts/homepageadmin.html
+++ b/PMS/accounts/templates/accounts/homepageadmin.html
@@ -13,7 +13,7 @@
 {% block body%}
 <div class="container">
   <div class="row">
-    <h2 class="student-name text-center">Welcome to the Payment Monitoring System, Admin!</h2>
+    <h2 class="student-name text-center">Welcome to the Payment Monitoring System, {{ request.user.admin.user }}!</h2>
   </div>
     
       <div class="row">
