--- a/PMS/accounts/templates/accounts/addstudents.html
+++ b/PMS/accounts/templates/accounts/addstudents.html
@@ -32,9 +32,9 @@
             <div class="wizard-container"> 
                 
                 <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
-                    <form action="{% url 'accounts:AddStudent' %}" method="">
+                    <form action="{% url 'accounts:AddStudent' %}" method="POST">
                 <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
-                
+                        {% csrf_token %}
                         <div class="wizard-header">
                             <h3>
                                 <br>
@@ -58,7 +58,7 @@
                                   <div class="col-sm-4 col-sm-offset-1">
                                      <div class="picture-container">
                                           <div class="picture">
-                                              <img src="img/default-avatar.png" class="picture-src" id="wizardPicturePreview" title=""/>
+                                              <img src="{% static 'img/default-avatar.png' %}" class="picture-src" id="wizardPicturePreview" title=""/>
                                               <input type="file" id="wizard-picture">
                                           </div>
                                           <h6>Choose Picture</h6>
@@ -68,10 +68,6 @@
                                       <div class="form-group">
                                         <label>First Name <small>(required)</small></label>
                                         <input name="firstname" type="text" class="form-control" placeholder="Andrew...">
-                                      </div>
-                                      <div class="form-group">
-                                        <label>Middle Name <small>(required)</small></label>
-                                        <input name="midname" type="text" class="form-control" placeholder="Parker...">
                                       </div>
                                       <div class="form-group">
                                         <label>Last Name <small>(required)</small></label>
@@ -128,12 +124,6 @@
                                     </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
-                                          <label>Email <small>(required)</small></label>
-                                          <input name="email" type="email" class="form-control" placeholder="andrew@creative-tim.com">
-                                      </div>
-                                  </div>
-                                  <div class="col-sm-10 col-sm-offset-1">
-                                      <div class="form-group">
                                           <label>Address <small>(required)</small></label>
                                           <input name="address" type="text" class="form-control" placeholder="6866 Williams Street Fayetteville, NC 28303">
                                       </div>
@@ -148,10 +138,6 @@
                                       <div class="form-group">
                                         <label>First Name <small>(required)</small></label>
                                         <input name="gfirstname" type="text" class="form-control" placeholder="Andrew...">
-                                      </div>
-                                      <div class="form-group">
-                                        <label>Middle Name <small>(required)</small></label>
-                                        <input name="gmidname" type="text" class="form-control" placeholder="Parker...">
                                       </div>
                                       <div class="form-group">
                                         <label>Last Name <small>(required)</small></label>
@@ -182,18 +168,6 @@
                                       
 
                                         <div class="col-sm-10 col-sm-offset-1" id = "sinfo" style="display:none;">
-                                      <div class="form-group">
-                                        <label>First Name <small>(required)</small></label>
-                                        <input name="gfirstname" type="text" class="form-control" placeholder="Andrew...">
-                                      </div>
-                                      <div class="form-group">
-                                        <label>Middle Name <small>(required)</small></label>
-                                        <input name="gmidname" type="text" class="form-control" placeholder="Parker...">
-                                      </div>
-                                      <div class="form-group">
-                                        <label>Last Name <small>(required)</small></label>
-                                        <input name="glastname" type="text" class="form-control" placeholder="Smith...">
-                                      </div>
                                   </div>
                                     </div>
                             </div>
@@ -211,10 +185,6 @@
                                         <label>Name <small>(required)</small></label>
                                         <input name="gfirstname" type="text" class="form-control" placeholder="Andrew...">
                                       </div>
-                                      <div class="form-group">
-                                          <label>Contact number <small>(required)</small></label>
-                                          <input name="gcontact" type="text" class="form-control" placeholder="441-5656">
-                                      </div>
                                   </div>
                                     </div>
                             </div>
@@ -228,10 +198,6 @@
                                       
 
                                         <div class="col-sm-10 col-sm-offset-1" id = "meminfo" style="display:none;">
-                                      <div class="form-group">
-                                        <label>Name of Organization <small>(required)</small></label>
-                                        <input name="gfirstname" type="text" class="form-control" placeholder="Drum and Buggle">
-                                      </div>
                                   </div>
                                     </div>
                             </div>
@@ -262,21 +228,21 @@
 
 {% block js %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/homepage.js"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/homepage.js' %}"></script>
 
 <!-- jQuery easing plugin --> 
 
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
         
     <!--   plugins   -->
-    <script src="js/jquery.bootstrap.wizard.js" type="text/javascript"></script>
+    <script src="{% static 'js/jquery.bootstrap.wizard.js' %}" type="text/javascript"></script>
     
     <!--  More information about jquery.validate here: http://jqueryvalidation.org/  -->
-    <script src="js/jquery.validate.min.js"></script>
-    <script src="js/passwordGenerator.js"></script>
+    <script src="{% static 'js/jquery.validate.min.js' %}"></script>
+    <script src="{% static 'js/passwordGenerator.js' %}"></script>
     <!--  methods for manipulating the wizard and the validation -->
-    <script src="js/wizard.js"></script>
+    <script src="{% static 'js/wizard.js' %}"></script>
     <script type="text/javascript">
             $(document).ready(function() {
             $(".dropdown-toggle").dropdown();
