--- a/PMS/accounts/templates/accounts/studenthomepage.html
+++ b/PMS/accounts/templates/accounts/studenthomepage.html
@@ -40,7 +40,7 @@
 <br>
 <div class="container">
   <div class="row">
-    <h2 class="student-name text-center">Welcome to the Payment Monitoring System, {{ request.user.student.user }}!</h2>
+    <h2 class="student-name text-center">Welcome to the Payment Monitoring System!</h2>
   </div>
     
        <div class="row">
