--- a/PMS/funds/templates/funds/addproject.html
+++ b/PMS/funds/templates/funds/addproject.html
@@ -1,5 +1,7 @@
 {% extends 'accounts/base.html' %}
 
+{% load staticfiles %}
+
 {% block css %}
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
