fixed the booleanfields bug

--- a/PMS/accounts/templates/accounts/addstudents.html
+++ b/PMS/accounts/templates/accounts/addstudents.html
@@ -82,13 +82,13 @@
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
-                                          <label>Password1 <small>(required)</small></label>
+                                          <label>Password <small>(required)</small></label>
                                           {{ form.password1 }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
-                                          <label>Password2 <small>(required)</small></label>
+                                          <label>Confirm Password <small>(required)</small></label>
                                           {{ form.password2 }}
                                       </div>
                                   </div>
