--- a/PMS/funds/templates/funds/viewallproject.html
+++ b/PMS/funds/templates/funds/viewallproject.html
@@ -54,8 +54,8 @@
                                     <td>{{ object.name}}</td>
                                     <td>P{{ object.cost}}</td>
                                     <td>
-                                        <a href="{% url 'funds:EditFunds' %}"><button class="button primary">Edit</button></a>
-                                        <a href="{% url 'funds:ViewFunds' %}"><button class="button primary">View</button></a>
+                                        <a href="{% url 'funds:EditProjects' %}"><button class="button primary">Edit</button></a>
+                                        <a href="{% url 'funds:ViewProjects' %}"><button class="button primary">View</button></a>
                                     </td>
                                 </tr>
                             {% endfor %}
