--- a/PMS/accounts/templates/accounts/base.html
+++ b/PMS/accounts/templates/accounts/base.html
@@ -33,7 +33,7 @@
                   <ul class="dropdown-menu">
                     <li><a href="{% url 'funds:AddFunds' %}">Add Fund</a></li>
                     <li><a href="{% url 'funds:ViewAllFunds' %}">View / Edit Fund</a></li>
-                    <li><a href="{% url 'funds:AddPayment' %">Add Payment</a></li>
+                    <li><a href="{% url 'funds:AddPayment' %}">Add Payment</a></li>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Project <b class="caret"></b></a>
