--- a/PMS/accounts/templates/accounts/homepageadmin.html
+++ b/PMS/accounts/templates/accounts/homepageadmin.html
@@ -66,8 +66,8 @@
                 <div class="social-widget">
                   <span id="fb"><i class="fa fa-facebook"></i>Financial Summary</span>
                   <ul>
-                    <li><p>Php 1,265<i>Collected payments</i></p></li>
-                    <li><p>Php 235,000<i>Pending payments</i></p></li>
+                      <li><p>Php 1,265<i>Collected payments</i></p></li>
+                      <li><p><i>Pending payments</i></p></li>
                   </ul>
                 </div><!-- Social Widget -->
               </div><!-- Widget Area -->
